@@ -23,8 +23,8 @@
  * Include necessary headers.
  */
 
-#include "driver.h"
 #include <config.h>
+#include "driver.h"
 
 
 /*
